# specimux

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  specimine.py  specimux.py  stats_to_sankey.py  test_integration.py  trace_event_schema.md  trace_to_stats.py  visualize_stats.py
.github/workflows/: ci.yml  publish.yml
src/specimux/: __init__.py  alignment.py  cli.py  constants.py  core.py  databases.py  demultiplex.py  io_utils.py  models.py  multiprocessing_utils.py  orchestration.py  specimine.py  trace.py  trace_stats.py  watch.py
test_data/integration_test_suite/: primers.fasta
tests/: __init__.py  conftest.py  test_integration.py  test_orientation_normalization.py
tests/data/integration_test_suite/: README.md  sequences.fastq  sequences_rc.fastq  specimens.txt  validate_test_results.py
tests/data/integration_test_suite/expected_output/full/ITS/: TEST_SPECIMEN_003.fastq
tests/data/integration_test_suite/expected_output/full/ITS/ITS1F-ITS4/: primers.fasta  primers.txt  sample_TEST_SPECIMEN_003.fastq
tests/data/integration_test_suite/expected_output/full/ITS2/: primers.txt  sample_TEST_SPECIMEN_001.fastq
tests/data/integration_test_suite/expected_output/full/ITS2/gITS7-ITS4/: TEST_SPECIMEN_001.fastq  TEST_SPECIMEN_002.fastq  primers.fasta  sample_TEST_SPECIMEN_002.fastq
tests/data/integration_test_suite/expected_output/partial/ITS2/gITS7-ITS4/: sample_barcode_fwd_ATAATATTCGGCA.fastq
tests/data/integration_test_suite/expected_output/partial/ITS2/gITS7-unknown/: barcode_fwd_ATAATATTCGGCA.fastq  sample_barcode_fwd_ATAATATTCGGCA.fastq
tests/data/integration_test_suite/expected_output/trace/: specimux_trace_20250812_161955_worker_1.tsv  specimux_trace_20250830_172023_worker_1.tsv  specimux_trace_20251020_142803_worker_2.tsv
tests/data/integration_test_suite/expected_output/unknown/ITS/ITS1F-ITS4/: sample_unknown.fastq  unknown.fastq
tests/data/integration_test_suite/expected_output/unknown/ITS/ITS1F-unknown/: sample_unknown.fastq  unknown.fastq
tests/data/integration_test_suite/expected_output/unknown/ITS/unknown-ITS4/: sample_unknown.fastq  unknown.fastq
(+8 files in other folders)
